--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'mixins';
 @import 'burger';
+@import 'preloader';
 
 * {
   padding: 0;
@@ -37,7 +38,7 @@ a {
   background-color: $color-accent;
   color: #fff;
   border: none;
-  border-radius: 4px; 
+  border-radius: 4px;
   cursor: pointer;
   outline: none;
   margin: 0 10px;
@@ -170,12 +171,12 @@ section {
       transition: 0.2s all ease;
       > * {
         background-color: transparentize(#fff, 0.4);
-        // border-radius: 50px; 
+        // border-radius: 50px;
         text-align: center;
         flex: 0 0 20%;
         padding: 10px;
         position: relative;
-        perspective: 1000px;        
+        perspective: 1000px;
         &::after {
           content: "";
           display: inline-block;
